0026314: Method SetShape working not correctly.

Test-cases for issues #25441 and #26314
small correction

Small corrections of test-cases for issues #25441 and #26314