src/XDEDRAW/XDEDRAW_Shapes.cxx
@@ -109,7 +109,8 @@ static Standard_Integer setShape (Draw_Interpretor& di, Standard_Integer argc, c
 //  XCAFDoc_ShapeTool myAssembly;
 //  myAssembly.Init(Doc);
   Handle(XCAFDoc_ShapeTool) myAssembly = XCAFDoc_DocumentTool::ShapeTool(Doc->Main());
-  myAssembly->SetShape(aLabel, aShape);
+  if( !myAssembly->IsAssembly(aLabel))
+    myAssembly->SetShape(aLabel, aShape);
   return 0;
 }
 
